Fixed additional scroll and empty spaces on Tablet

--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -1,16 +1,12 @@
 .about {
-  overflow-x: hidden;
-  @media (min-width: 220px) {
-    height: 1460px;
-  }
   @include onTablet {
-    height: 960px;
+    min-height: 960px;
   }
   &__article {
     position: relative;
     margin-bottom: 110px;
     @include onTablet {
-      margin-bottom: 200px;
+      margin-bottom: 210px;
     }
     &:last-of-type {
       margin-bottom: 0;
@@ -41,6 +37,7 @@
       top: 0;
       left: -34px;
       height: 415px;
+      max-width: 374px;
     }
     @include onDesktop {
       left: 0;
@@ -50,6 +47,7 @@
       @include onTablet {
         left: unset;
         right: -34px;
+        height: 415px;
       }
       @include onDesktop {
         right: 0;
@@ -79,7 +77,6 @@
     font-size: 14px;
     line-height: 21px;
     @include onTablet {
-      margin-bottom: 60px;
       font-size: 16px;
       line-height: 24px;
     }
