--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,8 @@
 .header {
-  height: 100vh;
+  // height: 100vh;
+  // @include onTablet {
+  height: max-content;
+  // }
   &__top {
     display: flex;
     justify-content: space-between;
