--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -12,9 +12,9 @@
     }
   }
   &__section {
+    // min-height: max-content;
     box-sizing: content-box;
-    margin: 0 auto;
-    margin-bottom: 110px;
+    margin: 0 auto 110px;
     padding: 0 34px;
     &--mob {
       padding: 0;
